--- a/week6/package.json
+++ b/week6/package.json
@@ -5,8 +5,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "db@create": "psql postgresql://postgres:postgres@dbtest.cn50fuyfr3aa.ap-southeast-1.rds.amazonaws.com -f ./database/indonesia-postgre.sql"
+    "start": "nodemon server",
+    "db@drop": "psql postgresql://postgres:postgres@dbtest.cn50fuyfr3aa.ap-southeast-1.rds.amazonaws.com -c 'DROP DATABASE IF EXISTS indonesia_2;'",
+    "db@reset": "psql postgresql://postgres:postgres@dbtest.cn50fuyfr3aa.ap-southeast-1.rds.amazonaws.com -f ./database/reset-db.sql"
+  },
+  "nodemonConfig": {
+    "exec": "npm run start",
+    "watch": [
+      "src/*"
+    ]
   },
   "author": "agussaputran",
   "license": "ISC",
@@ -16,5 +23,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "kill-port": "^1.6.1"
   }
 }
