week8 initial commit

--- a/week8/.env
+++ b/week8/.env
@@ -6,11 +6,18 @@
 # DB_PASSWORD=postgres
 
 PORT=8000
-PGHOST=dbtest.cn50fuyfr3aa.ap-southeast-1.rds.amazonaws.com
-PGPORT=5432
-PGDATABASE=indonesia_2
-PGUSER=postgres
-PGPASSWORD=postgres
+DBHOST=dbtest.cn50fuyfr3aa.ap-southeast-1.rds.amazonaws.com
+DBPORT=5432
+DBDATABASE=indonesia_2
+DBUSER=postgres
+DBPASSWORD=postgres
+DBDIALECT=postgres
+
+TOKEN_KEY=MY_TOKEN_KEY
+
+GOOGLE_CLIENT_ID=370429270201-0ae1e87j4vhgm2j91rdcajhi86t8pti3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:8000/google/callback
 
 # PORT=8000
 # PGHOST=localhost
