--- a/week8/package.json
+++ b/week8/package.json
@@ -40,6 +40,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
