--- a/week8/package.json
+++ b/week8/package.json
@@ -41,7 +41,8 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.12.0-alpha.1"
+    "sequelize": "^6.12.0-alpha.1",
+    "sequelize-auto": "^0.8.6"
   },
   "devDependencies": {
     "kill-port": "^1.6.1"
